구글 사이트 검증 메타 태그 추가 및 감사 페이지 생성

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="5h0-aQFTUYXaCVvGGn5A4-YuheoaOTxe1ir1VBxvEjI" />
     <title>펌웨어 개발자 포트폴리오</title>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -456,7 +457,14 @@
             <div class="container">
                 <h2 class="section-title">연락처</h2>
                 <div class="contact-form">
-                    <form>
+                    <form action="https://formsubmit.co/ejok9194@gmail.com" method="POST">
+                        <!-- 이메일 제목 설정 -->
+                        <input type="hidden" name="_subject" value="포트폴리오 웹사이트 문의">
+                        <!-- 성공 페이지 URL (현재 페이지로 리디렉션) -->
+                        <input type="hidden" name="_next" value="https://blessingq.github.io/thank-you.html">
+                        <!-- 스팸 방지 -->
+                        <input type="hidden" name="_captcha" value="false">
+                        
                         <div class="form-group">
                             <label for="name">이름</label>
                             <input type="text" id="name" name="name" required>
